# dot-claude-gui

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: schema-drift.yml
crates/claude-config/: Cargo.toml
crates/claude-config/src/: lib.rs  merge.rs  parse.rs  validate.rs  watch.rs  write.rs
crates/claude-daemon/: Cargo.toml
crates/claude-daemon/src/: auth.rs  executor.rs  lib.rs  main.rs  server.rs  state.rs  watcher.rs
crates/claude-daemon/src/api/: claudemd.rs  config.rs  health.rs  launcher.rs  mcp.rs  memory.rs  mod.rs  plugins.rs  projects.rs  skills.rs  ws.rs
crates/claude-daemon/tests/: api_test.rs  bind_test.rs
crates/claude-types/: Cargo.toml
crates/claude-types/src/: api.rs  claudemd.rs  events.rs  lib.rs  mcp.rs  memory.rs  plugins.rs  settings.rs  skills.rs
docs/: claude-schema-snapshot.json  schema-extras.json  schema-triage-2026-04-27.md
docs/superpowers/plans/: 2026-03-30-phase1-core-infrastructure.md  2026-03-30-phase2-settings-editor.md  2026-03-31-phase3-plugins-skills-memory.md  2026-03-31-phase4-mcp-effective-launcher-appsettings.md  2026-03-31-phase5-multi-daemon-config-dir.md  2026-04-09-phase6-toast-skill-claudemd.md  2026-04-10-phase-7-1-de-daemonization.md  2026-04-14-settings-dirty-field-tracking.md  2026-04-14-skills-subpanel-enhancements.md  2026-04-15-phase-7.1-remaining-verification.md  2026-04-16-i18n.md  2026-04-16-theme-system-redesign.md  2026-04-17-settings-json-schema-catchup.md
docs/superpowers/specs/: 2026-03-30-dot-claude-gui-design.md  2026-03-31-multi-daemon-and-config-dir.md  2026-04-09-phase6-toast-skill-claudemd-design.md  2026-04-10-plan-d-account-workspace-design.md  2026-04-16-i18n-design.md  2026-04-17-settings-json-schema-catchup-design.md
scripts/: README.md  check-claude-schema.ts  extract-claude-schema.ts
src/: App.svelte  app.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: events.rs  executor.rs  lib.rs  main.rs  state.rs  watcher.rs
src-tauri/src/commands/: claudemd.rs  config.rs  health.rs  launcher.rs  mcp.rs  memory.rs  mod.rs  plugins.rs  projects.rs  skills.rs
src/lib/: i18n.ts
src/lib/api/: client.ts  schema-snapshot.ts  types.ts  ws.ts
src/lib/components/appsettings/: AppSettingsView.svelte  ConnectionsPanel.svelte
src/lib/components/claudemd/: ClaudeMdEditor.svelte  ClaudeMdList.svelte  ClaudeMdModule.svelte
src/lib/components/effective/: EffectiveConfigView.svelte
src/lib/components/launcher/: LauncherView.svelte
src/lib/components/mcp/: McpModule.svelte  McpServerEditor.svelte  McpServerList.svelte
src/lib/components/memory/: MemoryEditor.svelte  MemoryList.svelte  MemoryModule.svelte
src/lib/components/plugins/: InstalledPlugins.svelte  MarketplaceBrowser.svelte  MarketplaceManager.svelte  PluginsModule.svelte  ProjectActivation.svelte
src/lib/components/settings/: AdvancedJsonEditor.svelte  EnvVarEditor.svelte  GeneralEditor.svelte  HooksEditor.svelte  JsonPreview.svelte  McpPolicyEditor.svelte  PermissionsEditor.svelte  PluginsMarketplaceEditor.svelte  RuntimeEditor.svelte  SandboxEditor.svelte  SettingsEditor.svelte  StatusLineEditor.svelte
src/lib/components/settings/sub/: JsonValueEditor.svelte  McpServerForm.svelte  SchemaKeyPicker.svelte
src/lib/components/shared/: ConnectionStatus.svelte  DirtyDot.svelte  EnvironmentSelector.svelte  ResizeHandle.svelte  ScopeSelector.svelte  StringListEditor.svelte  Toast.svelte
src/lib/components/skills/: SkillList.svelte  SkillPreview.svelte  SkillsModule.svelte
src/lib/ipc/: client.ts  events.ts
src/lib/locales/: en-US.json  es-ES.json  fr-FR.json  ja-JP.json  ko-KR.json  zh-CN.json
src/lib/stores/: appsettings.svelte.ts  claudemd.svelte.ts  config.svelte.ts  connection.svelte.ts  connections.svelte.ts  mcp.svelte.ts  memory.svelte.ts  plugins.svelte.ts  projects.svelte.ts  skills.svelte.ts  toast.svelte.ts
src/lib/utils/: diff.ts
tests/fixtures/: settings-full.json  settings-unknown-fields.json
