[package]
name = "dot-claude-gui"
version.workspace = true
edition.workspace = true

[lib]
name = "dot_claude_gui_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
claude-types = { path = "../crates/claude-types" }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde.workspace = true
serde_json.workspace = true
dirs-next = "2"
rand = "0.9"
base64 = "0.22"
tokio = { version = "1", features = ["net", "time"] }
tracing = "0.1"
