[package]
name = "dot-claude-gui"
version.workspace = true
edition.workspace = true

[lib]
name = "dot_claude_gui_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
claude-types = { path = "../crates/claude-types" }
claude-config = { path = "../crates/claude-config" }
notify = "8"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"
tauri = { version = "2", features = [] }
serde.workspace = true
serde_json.workspace = true
dirs-next = "2"
tokio = { version = "1", features = ["process", "io-util"] }
tracing = "0.1"
tauri-plugin-dialog = "2.7.0"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt", "macros"] }
