[package]
name = "claude-config"
version.workspace = true
edition.workspace = true

[dependencies]
claude-types = { path = "../claude-types" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
notify = "8"
notify-debouncer-full = "0.4"
tokio.workspace = true

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["test-util"] }
