[package]
name = "claude-daemon"
version.workspace = true
edition.workspace = true

[lib]
name = "claude_daemon"
path = "src/lib.rs"

[[bin]]
name = "claude-daemon"
path = "src/main.rs"

[dependencies]
claude-types = { path = "../claude-types" }
claude-config = { path = "../claude-config" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
axum = { version = "0.8", features = ["ws"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower-http = { version = "0.6", features = ["cors"] }
tower = "0.5"
clap = { version = "4", features = ["derive"] }
rand = "0.9"
base64 = "0.22"
notify = "8"
dirs-next = "2"
futures-util = "0.3"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"
portpicker = "0.1"
